--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "keywords": [
     "ioBroker",
     "GUI",
-	"keyboard"
+    "keyboard"
   ],
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -34,14 +34,16 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-exec": "^0.4.6"
+    "grunt-exec": "^0.4.6",
+    "mocha": "^2.3.4",
+    "chai": "^3.4.1"
   },
   "bugs": {
     "url": "https://github.com/ioBroker/ioBroker.vis-keyboard/issues"
   },
   "main": "widgets/iobroker.vis-keyboard.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/mocha/bin/mocha"
   },
   "license": "MIT"
 }
