--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "keyboard"
     ],
     "devDependencies": {
+        "@alcalzone/release-script": "^4.0.0",
+        "@alcalzone/release-script-plugin-iobroker": "^4.0.0",
+        "@alcalzone/release-script-plugin-license": "^4.0.0",
         "@iobroker/eslint-config": "^2.2.0",
         "@iobroker/vis-2-widgets-testing": "^1.0.6",
         "mocha": "^11.7.4",
@@ -43,7 +46,11 @@
         "LICENSE"
     ],
     "scripts": {
-        "test": "node node_modules/mocha/bin/mocha --exit"
+        "test": "mocha --exit",
+        "release": "release-script",
+        "release-patch": "release-script patch --yes",
+        "release-minor": "release-script minor --yes",
+        "release-major": "release-script major --yes"
     },
     "license": "MIT",
     "dependencies": {
